--- a/proprietary/tuna/etc/audio_effects.conf
+++ b/proprietary/tuna/etc/audio_effects.conf
@@ -18,6 +18,9 @@ libraries {
   pre_processing {
     path /system/lib/soundfx/libaudiopreprocessing.so
   }
+  downmix {
+    path /system/lib/soundfx/libdownmix.so
+  }
   SRS {
     path /system/lib/soundfx/libsrsfx.so
   }
@@ -70,6 +73,10 @@ effects {
   reverb_pre_ins {
     library reverb
     uuid 172cdf00-a3bc-11df-a72f-0002a5d5c51b
+  }
+  downmix {
+    library downmix
+    uuid 93f04452-e4fe-41cc-91f9-e475b6d1d69f
   }
   agc {
     library pre_processing
