--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -8,12 +8,12 @@ TWdelay=4500
 ffc=0
 wll=N
 OMAPgamma=6
-GammaOffset="-6 0 8"
+GammaOffset="0 0 0"
 ColorSafety=1
 ColorMult="2000000000 2000000000 2000000000"
 VolBoost=0
 HighPerf=0
-scaleGov=aggressive
+scaleGov=pegasusq
 maxFreq=1200000
 minFreq=350000
 hotPlug=1
