--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -1,20 +1,147 @@
+########################################################################################
+######## VANIR INIT.D TWEAKS CONFIGURATION       (Nuclearmistake rules)
+######## DIRECTIONS: IF YOU DON'T KNOW WHAT THIS IS, DON'T MESS WIFF IT.
+########             IF YOU DO, THEN THIS IS ON YOUR SDCARD FOR YOU TO CHANGE AS YOU WISH.
+########             CHANGES TO THIS FILE WILL PERSIST BETWEEN VANIR FLASHES (though they will only take effect on versions released after 10/17/2012
+########             IF YOUR PHONE CATCHES FIRE, IT'S ON YOU!
+########        ** these values are applied at boot. for changes to take effect, you must either reboot, or run "vanirtweakapply" in a terminal emulator **
+#######################################################################################
+### one pound (#) means the # can be removed to make the value after actually be set on boot... otherwise, the stock value is used
+### two or more pounds (#...#) means the line is a comment like this one... meant for a human to read. If you remove all of the pounds, bad things might happen, and Nuclearmistake will make you feel bad if you ask why.
+
+
+
+### FREQUENCIES
+### Available frequencies ON POPCORN KERNEL (these might change if you change your kernel... but why would you do that, anyways? :-P)
+### (230000, 350000, 700000, 1060000, 1200000, 1350000, 1420000)
+
+maxFreq=1200000
+minFreq=350000
+maxFreqScreenOff=700000
+
+
+
+### CPU Governor
+### If you don't know what it is, don't mess with it
+### Governers available ON POPCORN (this will not reflect available governers if you change kernels)
+### (pegasusq, ondemand, aggressive, interactive, gallimaufy, aggressivex, interactivex, gallimaufryx, performance)
+
+scaleGov=pegasusq
+
+
+
+### CPU Hotplug
+### If this is 0, then any governor that ends with an 'x' will be unhappy.
+### (0=stock/second core enabled/disabled by gorvernor automagically, 1 forces 2nd core to be on)
+#hotPlug=1
+
+
+
+### smartreflex (MPU=CPU, IVA=hardware media encoder, CORE=core)
+### (1=enabled, 0=disabled)
+
 srMPU=1
 srIVA=1
 srCORE=1
-gpuOC=0
+
+
+
+### GPU Overclock
+### (0=stock, 1=vanir recommended, 2=max)
+
+gpuOC=1
+
+
+
+### Battery life extender 
+### a.k.a. the percentage of battery at which your battery is considered full
+### <<higher values may reduce your battery's lifespan>>
+### (stock=96, vanir recommended=100)
+
 BLX=100
-TWstatus=0
-TWdelay=4500
-ffc=0
-wll=N
+
+### Force fast charge
+### same effect as the statusbar toggle, but this is applied at boot
+### (0=stock/disabled, 1=enabled)
+
+#ffc=0
+
+
+
+### Wireless Low Latency Mode
+### Increases internets while, but reduces battery life (while on WiFi)
+### (N=disabled/stock, Y=enabled)
+
+#wll=Y
+
+
+################## BEGIN SCREEN STUFF ##################
+
+### OMAP Gamma
+### Controls display contrast
+### (recommended value=6)
+
 OMAPgamma=6
-GammaOffset="0 0 0"
-ColorSafety=1
-ColorMult="2000000000 2000000000 2000000000"
-VolBoost=0
-HighPerf=0
-scaleGov=pegasusq
-maxFreq=1200000
-minFreq=350000
-hotPlug=1
-force_override_leantweaks=1
+
+
+
+### Gamma Offset
+### Default value is nice, but this one is nicer. Uncomment to try it.
+### (3 numbers, corresponding to RGB channels)
+
+GammaOffset="-6 0 5"
+
+
+
+### COLOR SAFETY
+### removes limits on color multipliers
+### (1=enabled/stock, 0=disabled/any multipliers allowed)
+
+#ColorSafety=1
+
+
+
+### COLOR MULTIPLIER
+### this is what makes Morfic's Trinity Kernel, or Ezekeel's color presets on Imoseon's LeanKernel using Jakebite's LeanTweaks look like they do
+### (3 numbers... in the 2000000000 department... corresponding to RGB channels)
+
+#ColorMult="2000000000 2000000000 2000000000"
+
+
+################## END SCREEN STUFF ##################
+
+
+################## BEGIN SOUND STUFF ##################
+
+
+### Volume boost
+### Vanir's sound is loud... this can make it louderererer
+### (0=stock/no boost, 1=slight boost, 2=moderate boost, 3=ultra boost)
+
+#VolBoost=0
+
+
+
+### High performance sound
+### This makes the sound even gooderer... at the cost of some battery life.
+### (0=stock/disabled, 1=unn tiss unn tiss unn tiss unn tiss)
+
+#HighPerf=1
+
+
+################## END SOUND STUFF ##################
+
+
+### Force Override Leantweaks
+### This will prevent conflicts related to both leantweaks (with leankernel of course) and 99vanir setting the same things... any value other than 0 will stop this entire script from running if leantweaks seems to be installed
+### (1=enabled/default, 0=disabled)
+
+#force_override_leantweaks=1
+
+
+
+### Disable Logcat
+### This option exists, but disabling logcat is NOT RECOMMENDED
+### (1=disable logcat, 0=stock)
+
+#disableLogcat=0
