Add option to disable all vanir tweaks, and set it to enabled by default (for people who already have favorite kernels and other tweak stuff)
Change-Id: I3752ed79e63055b6ee53df2b1cbd94e38ad7b4d8

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -10,6 +10,9 @@
 ### two or more pounds (#...#) means the line is a comment like this one... meant for a human to read. If you remove all of the pounds, bad things might happen, and Nuclearmistake will make you feel bad if you ask why.
 
 
+### Enable these tweaks
+### (1=enabled, 0 or commented = disabled)
+enableTweaks=1
 
 ### FREQUENCIES
 ### Available frequencies ON POPCORN KERNEL (these might change if you change your kernel... but why would you do that, anyways? :-P)
