Switch default governor to interactive
Take advantage of the cpu boost on touch

This needs to be tested to make sure there isn't a large battery hit

Use with latest PopcornKernel
Change-Id: I791019bc785087ca56b66e0356cbbaabdb6c43a8

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -29,7 +29,7 @@ maxFreqScreenOff=700000
 ### Governers available ON POPCORN (this will not reflect available governers if you change kernels)
 ### (pegasusq, ondemand, aggressive, interactive, gallimaufy, aggressivex, interactivex, gallimaufryx, performance)
 
-scaleGov=pegasusq
+scaleGov=interactive
 
 
 
