Add ZRAM support to vanir.cfg
Set the default value to 1 if the config file
doesn't have ZRAM stuff in it (allows previous
configs that didn't have this to live-on, while
adding a default value to people's existing vals)

Added vanir config menu for memory management.

the zram script is straight from Imoseyon's LK,
modified to use a non-LK-ramdisk busybox location

Change-Id: Ib647338e2e6ca5108f572bdc6b0351263c362b75

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -133,3 +133,10 @@ GammaOffset="-6 0 5"
 ### (1=enabled/default, 0=disabled)
 
 #force_override_leantweaks=1
+
+
+### ZRAM
+### This increases virtual memory using swap or compression or something
+### (1=enabled/recommended, 0=disabled)
+
+zramStatus=1
