--- a/proprietary/common/init.vanir.rc
+++ b/proprietary/common/init.vanir.rc
@@ -33,6 +33,12 @@ on boot
     write /sys/kernel/mm/ksm/pages_to_scan 181    # 256
     write /sys/kernel/mm/ksm/run 1
 
+# sysinit (/system/etc/init.d)
+service sysinit /system/bin/sysinit
+    user root
+    group root
+    oneshot
+
 # adb over network
 on property:service.adb.tcp.port=5555
     stop adbd
