vanir config - KSM Options
Change-Id: Ia8d163b512a2c8f672ed8df49f619e5604e4dabd

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -115,3 +115,9 @@ GammaOffset="-6 0 5"
 ### (1=enabled/recommended, 0=disabled)
 
 zramStatus=1
+
+
+### KSM
+ksmRun=1
+ksmSleep=4000
+ksmPagesToScan=128
