GPU Governor control
Change-Id: I1a09b97841c72800d2a1c8e246dce6e4fd1ed03c
Signed-off-by: nuclearmistake <nuclearmistake@gmail.com>

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -40,6 +40,7 @@ srCORE=1
 ### (0=stock, 1=vanir recommended, 2=max)
 
 gpuOC=1
+#gpuGOV=ondemand
 
 ### Battery life extender 
 ### a.k.a. the percentage of battery at which your battery is considered full
