Fix setting of default freqs, and use stock freqs by default because mako is funky
Change-Id: I040f97ffb3a125effbadcd51e2b244f3390cb7b8

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -18,9 +18,9 @@ enableTweaks=1
 ### Available frequencies ON POPCORN KERNEL (these might change if you change your kernel... but why would you do that, anyways? :-P)
 ### (230000, 350000, 700000, 1060000, 1200000, 1350000, 1420000)
 
-maxFreq=1200000
-minFreq=350000
-maxFreqScreenOff=700000
+#maxFreq=1200000
+#minFreq=350000
+#maxFreqScreenOff=700000
 
 ### CPU Governor
 ### If you don't know what it is, don't mess with it
