Mako deserves it's own vanir.cfg
It seems all other nexi use roughly the same frequencues.  Adjust mako to stock.

Change-Id: Ide3148839fee558d8c6a47bbe19d9b819e89e284
Signed-off-by: DHOMD <DHO@dho.im>

--- a/proprietary/common/etc/mako-vanir.cfg
+++ b/proprietary/common/etc/mako-vanir.cfg
@@ -1,5 +1,5 @@
 ########################################################################################
-######## VANIR INIT.D TWEAKS CONFIGURATION       (Nuclearmistake rules+tweaked by DHO)
+######## VANIR INIT.D TWEAKS CONFIGURATION       (Nuclearmistake rules + Tweaked by DHO)
 ######## DIRECTIONS: IF YOU DON'T KNOW WHAT THIS IS, DON'T MESS WIFF IT.
 ########             IF YOU DO, THEN THIS IS ON YOUR SDCARD FOR YOU TO CHANGE AS YOU WISH.
 ########             CHANGES TO THIS FILE WILL PERSIST BETWEEN VANIR FLASHES (though they will only take effect on versions released after 10/17/2012
@@ -15,12 +15,12 @@
 enableTweaks=1
 
 ### FREQUENCIES
-### Commonlly Available frequencies
-### (230000, 350000, 700000, 1060000, 1200000, 1350000, 1420000)
+### Commonly Available frequencies
+### (384000, 384000, 702000, 1080000, 1242000, 1350000, 1458000, 1512000)
 
-maxFreq=1200000
-minFreq=350000
-maxFreqScreenOff=700000
+#maxFreq=1512000
+#minFreq=384000
+#maxFreqScreenOff=702000
 
 ### CPU Governor
 ### If you don't know what it is, don't mess with it
@@ -115,6 +115,7 @@ GammaOffset="-6 0 5"
 ### (1=enabled/recommended, 0=disabled)
 
 zramStatus=1
+
 
 ### KSM
 ksmRun=1
