modified init.vanir.rc to allow both ksm and uksm and disabled ksmrun=1 in vanir.cfg
a kernel with uksm support will follow shortly

Change-Id: I9de56bedd3c19c72cdc459ea1cefcdd3063a1ce9
Signed-off-by: Dan Trifan <jimsth@gmail.com>

--- a/proprietary/common/etc/vanir.cfg
+++ b/proprietary/common/etc/vanir.cfg
@@ -116,7 +116,7 @@ GammaOffset="-6 0 5"
 
 zramStatus=1
 
-### KSM
-ksmRun=1
-ksmSleep=4000
-ksmPagesToScan=128
+### KSM2
+#ksmRun=0
+#ksmSleep=4000
+#ksmPagesToScan=128
