--- a/proprietary/common/init.vanir.rc
+++ b/proprietary/common/init.vanir.rc
@@ -31,10 +31,25 @@ on boot
     chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
     chown root system /sys/kernel/mm/ksm/run
     chmod 0664 /sys/kernel/mm/ksm/run
-    write /sys/kernel/mm/ksm/sleep_millisecs 2000 # 1200
-    write /sys/kernel/mm/ksm/pages_to_scan 181    # 256
-    write /sys/kernel/mm/ksm/run 1
+    write /sys/kernel/mm/ksm/run 0
 
+# Add UKSM Support
+    chown root system /sys/kernel/mm/uksm/run
+    chmod 0664 /sys/kernel/mm/uksm/run
+    chown root system /sys/kernel/mm/uksm/sleep_millisecs
+    chmod 0664 /sys/kernel/mm/uksm/sleep_millisecs
+    chown root system /sys/kernel/mm/uksm/cpu_governor
+    chmod 0664 /sys/kernel/mm/uksm/cpu_governor
+    chown root system /sys/kernel/mm/uksm/max_cpu_percentage
+    chmod 0664 /sys/kernel/mm/uksm/max_cpu_percentage
+    chown root system /sys/kernel/mm/uksm/cpu_ratios
+    chmod 0664 /sys/kernel/mm/uksm/cpu_ratios
+    chown root system /sys/kernel/mm/uksm/eval_intervals
+    chmod 0664 /sys/kernel/mm/uksm/eval_intervals
+    chown root system /sys/kernel/mm/uksm/abundant_threshold
+    chmod 0664 /sys/kernel/mm/uksm/abundant_threshold
+    write /sys/kernel/mm/uksm/run 1
+ 
 # sysinit (/system/etc/init.d)
 service sysinit /system/bin/sysinit
     user root
