Replace working rngd with another one... and move some stuff to sysctl from 98SONIC_SHOCK
from James Dean

Change-Id: I17b5105b46e82068a5e4ef071ed5472ae3208754

--- a/proprietary/common/etc/sysctl.conf
+++ b/proprietary/common/etc/sysctl.conf
@@ -1,7 +1,18 @@
-vm.dirty_ratio = 90
+fs.file-max = 524288
+fs.inotify.max_queued_events = 32000
+
+net.ipv4.tcp_fin_timeout = 15
+net.ipv4.tcp_keepalive_intvl = 30
+net.ipv4.tcp_keepalive_probes = 5
+net.ipv4.tcp_keepalive_time = 1800
+net.ipv4.tcp_tw_recycle = 1
+net.ipv4.tcp_tw_reuse = 1
+
 vm.dirty_background_ratio = 55
 vm.dirty_expire_centisecs = 200
+vm.dirty_ratio = 90
 vm.dirty_writeback_centisecs = 500
+vm.laptop_mode = 1
 vm.min_free_order_shift = 4
 vm.min_free_kbytes = 4096
 vm.oom_kill_allocating_task = 1
@@ -9,3 +20,13 @@ vm.overcommit_memory = 1
 vm.overcommit_ratio = 50
 vm.swappiness = 0
 vm.vfs_cache_pressure = 20
+
+kernel.msgmni = 2048
+kernel.msgmax = 64000
+kernel.panic = 0
+kernel.panic_on_oops = 1
+kernel.random.read_wakeup_threshold = 64
+kernel.random.write_wakeup_threshold = 256
+kernel.sem = 500,512000,64,2048
+kernel.shmmax = 268435500
+kernel.threads-max = 525810
