--- a/proprietary/common/init.vanir.rc
+++ b/proprietary/common/init.vanir.rc
@@ -90,6 +90,17 @@ on boot
     chown root system /sys/kernel/mm/uksm/abundant_threshold
     chmod 0664 /sys/kernel/mm/uksm/abundant_threshold
     write /sys/kernel/mm/uksm/run 1
+
+    # Assume SMP uses shared cpufreq policy for all CPUs
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+    chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+
+    chown system system /dev/cpuctl/apps/cpu.notify_on_migrate
+    chmod 0644 /dev/cpuctl/apps/cpu.notify_on_migrate
  
 # sysinit (/system/etc/init.d)
 service sysinit /system/bin/sysinit
