Revert "Don't set TERM in init.vanir.rc"
Fixes programs that use libncurses (htop, etc.)

This reverts commit cf71612679acda69673de6db68d85c1e0873bc2a.

--- a/proprietary/common/init.vanir.rc
+++ b/proprietary/common/init.vanir.rc
@@ -1,8 +1,9 @@
 import /init.superuser.rc
 
 on init
-    export ANDROID_CACHE /cache
     export TERMINFO /system/etc/terminfo
+    export TERM linux
+    export ANDROID_CACHE /cache
 
 on post-fs-data
     mkdir /cache/dalvik-cache 0771 system system
