boot.d: "userinit" venirified
adds both ROM utility and user customizability
1. instead of polling in a backgrounded shell, post-boot init.d scripts can now be stuck in /system/etc/boot.d
2. after the boot.d scripts run, any crap a user found on XDA and ADB pushed to /data/boot.d will run (and probably brick their phone. TROLOLOL newbs)

Change-Id: I3d31d028777f2dfc42c53950a61d69fa5fc75de4

--- a/proprietary/common/init.vanir.rc
+++ b/proprietary/common/init.vanir.rc
@@ -111,9 +111,17 @@ on boot
 
     chown system system /dev/cpuctl/apps/cpu.notify_on_migrate
     chmod 0644 /dev/cpuctl/apps/cpu.notify_on_migrate
+
+on property:sys.boot_completed=1
+    start userinit
  
 # sysinit (/system/etc/init.d)
 service sysinit /system/bin/sysinit
+    user root
+    group root
+    oneshot
+
+service userinit /system/bin/userinit
     user root
     group root
     oneshot
