Vanir_Inverted: more updates for new ThemeEngine
this ought to fix the NPEs that happened in themechooser when it tried to load this theme as a LegacyTheme...

Change-Id: Idce78e5b8ad61f73461adfd906daccb5b0a8de70

--- a/themes/Vanir_Inverted/AndroidManifest.xml
+++ b/themes/Vanir_Inverted/AndroidManifest.xml
@@ -18,11 +18,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vanir.theme.vanirinverted" >
 
-    <uses-feature android:required="true" android:name="org.cyanogenmod.theme" />
-
-    <application android:hasCode="false" android:icon="@drawable/ic_launcher" android:label="Vanir Inverted">
-    </application>
-
+    <application android:hasCode="false" android:icon="@drawable/ic_launcher" android:label="Vanir Inverted" />
     <meta-data android:name="org.cyanogenmod.theme.name" android:value="Vanir Inverted"/>
     <meta-data android:name="org.cyanogenmod.theme.author" android:value="styr" />
 
