sysctl.conf: set vm.swappiness here
try to set vm.swappiness to 5 since our default ramdisk is being overridden
in some builds

Change-Id: I86b7ab65016ffac52c15a5f186fb53a88c81c7de

--- a/proprietary/common/etc/sysctl.conf
+++ b/proprietary/common/etc/sysctl.conf
@@ -16,3 +16,5 @@ kernel.random.read_wakeup_threshold = 64
 kernel.random.write_wakeup_threshold = 256
 kernel.shmmax = 268435500
 kernel.threads-max = 525810
+
+vm.swappiness = 5
